# velox

./: Cargo.toml  README.md  default.nix  sarsi.cabal  stack.yaml  velox.cabal
sarsi/: Main.hs
sarsi-nvim/NVIM/: Client.hs
src/: Sarsi.hs  Velox.hs  main.rs
src/Codec/: Velox.hs
src/Codec/GHC/: Log.hs
src/Data/Attoparsec/: Machine.hs
src/Distribution/Sandbox/: Utils.hs
src/Sarsi/: Consumer.hs  Producer.hs
src/Velox/: Artifact.hs  Build.hs  Dependencies.hs  Display.hs  Environment.hs  Internal.hs  Job.hs  Project.hs  Task.hs  Workspace.hs
src/Velox/Job/: Action.hs  Task.hs
velox/: Main.hs
velox-nvim/: Main.hs
velox-nvim/NVIM/: Client.hs
velox-nvim/Velox/: Plugin.hs
velox-nvim/Velox/Plugin/: Internal.hs
velox/Main/: Automaton.hs  Command.hs  Watch.hs
