name:                   sarsi
version:                0
license:                Apache-2.0
license-file:           LICENSE
author:                 Alois Cochard
maintainer:             alois.cochard@gmail.com
copyright:              Copyright (c) 2016 Alois Cochard
category:               Development
build-type:             Simple
cabal-version:          >=1.10

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:
    Codec.GHC.Log
    Codec.Velox
    Data.Attoparsec.Machine
    Data.Attoparsec.Text.Machine
    Sarsi
    Sarsi.Producer
    Sarsi.Consumer
  build-depends:
      base                  >= 4.6.0.1    && < 5
    , attoparsec            >= 0.12       && < 0.14
    , binary                >= 0.7        && < 0.9
    , bytestring            >= 0.10       && < 0.11
    , containers            >= 0.5        && < 0.6
    , cryptonite            >= 0.10       && < 0.14
    , directory             >= 1.2        && < 1.3
    , filepath              >= 1.4        && < 1.5
    , machines              >= 0.5        && < 0.6
    , machines-process      >= 0.2        && < 0.3
    , machines-io           >= 0.2        && < 0.3
    , msgpack               >= 1.0        && < 1.1
    , network               >= 2.6        && < 2.7
    , process               >= 1.1        && < 1.5
    , text                  >= 1.2        && < 1.3
    , vector                >= 0.10       && < 0.12

executable velox 
  main-is:              Main.hs
  build-depends:       
      base
    , sarsi
  hs-source-dirs:       sarsi
  ghc-options:          -Wall
  default-language:     Haskell2010

executable velox-nvim
  main-is:              Main.hs
  other-modules:
    -- Data.MessagePack.ToJSON
    Data.MessagePack.RPC
    NVIM.Client
    -- NVIM.Info
  build-depends:       
      base
    , sarsi
    -- , aeson                 >= 0.9        && < 0.12
    , binary
    , bytestring
    , containers
    -- , machines
    -- , machines-process
    -- , machines-io
    , msgpack
    , network
    , process
    , text
    , unordered-containers  >= 0.2        && < 0.3
    , vector
  hs-source-dirs:       sarsi-nvim
  ghc-options:          -Wall
  default-language:     Haskell2010
