name:                velox
version:             0.0.1.0
synopsis:            A continuous development automaton for cabal projects.
--description:         
homepage:            http://github.com/aloiscochard/velox
license:             Apache-2.0
license-file:        LICENSE
author:              Alois Cochard
maintainer:          alois.cochard@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -fwarn-incomplete-patterns
  exposed-modules:
    Distribution.Sandbox.Utils
    Velox
    Velox.Artifact
    Velox.Build
    Velox.Dependencies
    Velox.Display
    Velox.Environment
    Velox.Internal
    Velox.Job
    Velox.Job.Action
    Velox.Job.Task
    Velox.Project
    Velox.Workspace
  build-depends:       
      base                >= 4.7        && < 5
    , async               >= 2.0        && < 2.1
    , binary              >= 0.7        && < 0.8
    , bytestring          >= 0.10.0.2   && < 0.11
    , Cabal               >= 1.19       && < 1.21
    , containers          >= 0.5.0.0    && < 0.6
    , directory           >= 1.2.0.1    && < 1.3
    , either              >= 4.3.0.1    && < 4.4
    , filepath            >= 1.3.0.1    && < 1.4
    , hashable            >= 1.1.2.5    && < 1.3
    , machines
    , machines-io
    , machines-process
    , process             >= 1.1.0.2    && < 1.3
    , safe                >= 0.3        && < 0.4
    , stm                 >= 2.4        && < 2.5
    , transformers        >= 0.3        && < 0.5

executable velox
  default-language:  Haskell2010
  hs-source-dirs:    velox
  main-is:           Main.hs
  ghc-options:       -threaded -fwarn-incomplete-patterns
  other-modules:     
    Main.Automaton
    Main.Command
    Main.Watch
  build-depends:       
      base
    , async               >= 2.0        && < 2.1
    , bytestring
    , containers
    , Cabal
    , directory
    , either
    , filepath
    , hinotify            >= 0.3        && < 0.4
    , machines
    , machines-directory
    , machines-io
    , transformers
    , unix                >= 2.7        && < 2.8
    , velox               == 0.0.1.0
