name:                   velox
version:                0
license:                Apache-2.0
license-file:           LICENSE
author:                 Alois Cochard
maintainer:             alois.cochard@gmail.com
copyright:              Copyright (c) 2016 Alois Cochard
category:               Development
build-type:             Simple
cabal-version:          >=1.10

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:
    Codec.GHC.Log
    Codec.Velox
    Data.Attoparsec.Machine
    Data.Attoparsec.Text.Machine
    Velox
  build-depends:
      base                  >= 4.6.0.1    && < 5
    , attoparsec            >= 0.12       && < 0.14
    , binary                >= 0.7        && < 0.9
    , bytestring            >= 0.10       && < 0.11
    , containers            >= 0.5        && < 0.6
    , machines              >= 0.5        && < 0.6
    , machines-process      >= 0.2        && < 0.3
    , msgpack               >= 1.0        && < 1.1
    , process               >= 1.1        && < 1.5
    , text                  >= 1.2        && < 1.3
    , vector                >= 0.10       && < 0.12

executable velox 
  main-is:              Main.hs
  build-depends:       
      base
    , velox
  hs-source-dirs:       velox
  ghc-options:          -Wall
  default-language:     Haskell2010

executable velox-nvim
  main-is:              Main.hs
  other-modules:
    Velox.Plugin
    Velox.Plugin.Internal
  build-depends:       
      base
    , nvim-hs               >= 0.0       && < 0.1
    , velox
  hs-source-dirs:       velox-nvim
  ghc-options:          -Wall
  default-language:     Haskell2010
